OPENNLP-1626 Update Website with new models (1.1) - updates models.ad to cover all new 18 languages - restructures models.ad for better separation and readability of long tables - reduces information duplication / overhead - adds better CSS styling for TOC formatting - adds TOC directives to several pages where helpful - fixes several occasions of incorrectly chosen section/subsection depths, in download.ad, maven-dependency.ad and gradle-dependency.ad - adds news entry for the models release 1.1 (2024-10-28)

--- a/src/main/jbake/assets/css/scheme-dark.css
+++ b/src/main/jbake/assets/css/scheme-dark.css
@@ -71,6 +71,14 @@
     .tableblock > a {
         color: #f59523;
     }
+    #toctitle {
+        color: #eee;
+        background: #222;
+    }
+    #toc > ul > li > a, #toc > ul > li > ul > li > a {
+        color: #f59523;
+        background: #222;
+    }
     .content pre,
     .content pre > code,
     .com, .tag, .pln, .str, .pun, .kwd,
